--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "naf-entity-saver",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "NAF Entity Saver is a patch of the Networked Aframe (NAF) entity manager class that will take ownership and rebroadcast entities of another user when they leave the room.",
   "main": "dist/naf-entity-saver.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Nitramtj/naf-entity-saver/issues"
   },
-  "homepage": "https://github.com/Nitramtj/naf-entity-saver#readme"
+  "homepage": "https://github.com/Nitramtj/naf-entity-saver#readme",
+  "peerDependencies": {
+    "networked-aframe": "^0.2.0"
+  }
 }
